# Robotica

./: README.md
Project Search and Sample Return/: Rover_Project_Test_Notebook.ipynb  decision.py  drive_rover.py  perception.py  write up udacity.odt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: ros_embarcados_tutorial.pc  ros_teste_tutorial.pc
devel/lib/ros_teste_tutorial/: listener  talker
devel/share/ros_embarcados_tutorial/cmake/: ros_embarcados_tutorialConfig.cmake
devel/share/ros_teste_tutorial/cmake/: ros_teste_tutorialConfig.cmake
src/ros_embarcados_tutorial/: CMakeLists.txt
src/ros_teste_tutorial/: CMakeLists.txt
src/ros_teste_tutorial/src/: listener.cpp  talker.cpp
